[package]
name = "gitSource"
version = "0.0.1"
authors = ["archways <archways@gmx.us>"]
edition = "2021"
description = "Git CLI tool to update the server with the latest code"
homepage = "https://github.com/archways404/"
repository = "https://github.com/archways404/gitsource"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
clap = { version = "4.1", features = ["derive"] }

[[bin]]
name = "gs"
path = "src/main.rs"
